--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://lucasmieres2001.github.io/my-cv/",
+  "homepage": "https://lucasmieres2001.github.io/home/",
   "name": "my-cv",
   "private": true,
   "version": "0.0.1",
